<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014 Gimbal, Inc. All rights reserved.

    This software is the confidential and proprietary information of Gimbal, Inc.

    The following sample code illustrates various aspects of the Gimbal SDK.

    The sample code herein is provided for your convenience, and has not been
    tested or designed to work on any particular system configuration. It is
    provided AS IS and your use of this sample code, whether as provided or
    with any modification, is at your own risk. Neither Gimbal, Inc.
    nor any affiliate takes any liability nor responsibility with respect
    to the sample code, and disclaims all warranties, express and
    implied, including without limitation warranties on merchantability,
    fitness for a specified purpose, and against infringement.
-->
<resources>

    <string name="app_name">inPace</string>
    <string name="app_title">inPace</string>
    <string name="action_enable">Enable</string>
    <string name="action_not_now">Not Now</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_tos">Terms of Use</string>
    <string name="action_settings">Settings</string>
    <string name="action_place_monitoring">Place Monitoring</string>
    <string name="action_reset_app_instance_id">Reset App Instance ID</string>
    <string name="optin_top_text">Enable location to find</string>
    <string name="optin_bottom_text">nearby places.</string>
    <string name="Seidenberg">Welcome To Seidenberg!!</string>
    <string name="First1">Ready, Set, Go!!</string>
    <string name="First2">41 Park Row</string>
    <string name="First3">Hi there! Let’s start off our adventure to the bookstore!</string>
    <!-- <string name="First3">Visit Department Chair Dr. Scharff at the Seidenberg School of CSIS to find your first beacon</string> -->
    <!-- <string name="First3">Visit Dr. Marchese Office at the Seidenberg School of CSIS to find your first beacon</string> -->
    <string name="First4">Next!</string>
    <string name="title_activity_splash">Splash</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_first">Bookstore</string>
    <string name="title_activity_game_options">inPace</string>
    <string name="start">START</string>
    <string name="nextlocation">Next Location!</string>
    <string name="title_activity_app_service_location2">AppServiceLocation2</string>
    <string name="title_activity_location2">Professors Office </string>
    <string name="libraryFirst1">You found it! </string>
    <string name="libraryFirst2">163 William St 2nd floor</string>
    <string name="libraryFirst3">You are almost there, let’s pay a visit to Computer Science chair Dr. Scharff and claim your Seidenberg prize!</string>
    <string name="libraryFirst4">Next!</string>
    <string name="bookstoreFirst1">You found it!</string>
    <string name="bookstoreFirst2">Thanks for playing.I hope you enjoyed getting to know the campus.</string>
    <string name="bookstoreFirst3">Hope to see you at the next game!</string>
    <string name="bookstoreFirst4">Next!</string>
    <string name="cafeteriaFirst1">Ready, Set, Go!!</string>
    <string name="cafeteriaFirst2">1 Pace Plaza</string>
    <string name="cafeteriaFirst3">Explore the food at cafeteria</string>
    <string name="cafeteriaFirst4">Next!</string>
    <string name="gymFirst1">Ready, Set, Go!!</string>
    <string name="gymFirst2">1 Pace Plaza</string>
    <string name="gymFirst3">Explore the gym</string>
    <string name="gymFirst4">Next!</string>
    <string name="title_activity_app_activity_location2">AppActivityLocation2</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="badges">Badges</string>
    <string name="title_activity_app_activity_gym">AppActivityGym</string>
    <string name="title_activity_app_activity_cafeteria">AppActivityCafeteria</string>
    <string name="title_activity_app_activity_bookstore">AppActivityBookstore</string>
    <string name="title_activity_location_gym">LocationGym</string>
    <string name="title_activity_location_cafeteria">LocationCafeteria</string>
    <string name="title_activity_location_bookstore">LocationBookstore</string>
    <string name="title_activity_leaderboard">inPace</string>
    <string name="SCORE_BOARD">Leaderboard</string>
    <string name="back">Go to previous page</string>
    <string name="title_activity_beacons_list_view">inPace</string>
    <string name="listcafeteria">Cafeteria</string>
    <string name="listlibrary">Library</string>
    <string name="listbookstore">Barnes and Noble Bookstore</string>
    <string name="listgym">Gym</string>
    <string name="listprofessor">Dr Scharff\'s Office</string>

</resources>