<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gimbal.android.sample.BeaconsListView"
    android:background="#0099CC" >

    <TextView
        android:id="@+id/cafeteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listcafeteria"
        android:textSize="35sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cafeteria"
        android:text="@string/listlibrary"
        android:textSize="35sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/bookstore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/library"
        android:text="@string/listbookstore"
        android:textSize="35sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/gym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookstore"
        android:text="@string/listgym"
        android:textSize="35sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/professor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gym"
        android:text="@string/listprofessor"
        android:textSize="35sp"
        android:textColor="@color/white" />

</RelativeLayout>