<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gimbal.android.sample.LocationBookstore" >

    <TextView
        android:id="@+id/readySetGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bookstoreFirst1"
        android:textColor="@android:color/holo_red_light"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:text="@string/bookstoreFirst2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/address"
        android:layout_marginTop="79dp"
        android:text="@string/bookstoreFirst3"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bookstorefoundFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instruction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/bookstoreFirst4"
        android:textStyle="italic" />

</RelativeLayout>